samples/_failures_safe/1761694218_d8d6b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_134ea066.c: In function ‘main’:
./samples/SAFE/__tmp_134ea066.c:154:21: error: expected declaration or statement at end of input
  154 |                     print_matrix(&result, "A + B");
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_134ea066.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_134ea066.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_134ea066.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_134ea066.c:154:21: error: expected declaration or statement at end of input
